Add an experimental code to get familiar with go templates.

--- a/01_lenslocked/modd.conf
+++ b/01_lenslocked/modd.conf
@@ -3,6 +3,6 @@
 }
 
 **/*.go !**/*_test.go {
-  prep: go build -o ./build/lenslocked
+  prep: go build -gcflags=all="-N -l" -o ./build/lenslocked
   daemon +sigterm: ./build/lenslocked
 }
