Create templates (same concept as components) and use them to render questions and answers.

--- a/01_lenslocked/modd.conf
+++ b/01_lenslocked/modd.conf
@@ -2,7 +2,7 @@
     prep: go test @dirmods
 }
 
-**/*.go !**/*_test.go {
+**/*.go !**/*_test.go **/*.html {
   prep: go build -gcflags=all="-N -l" -o ./build/lenslocked
   daemon +sigterm: ./build/lenslocked
 }
