Configure tailwind to use tailwind 3 with CLI.

--- a/01_lenslocked/modd.conf
+++ b/01_lenslocked/modd.conf
@@ -3,6 +3,7 @@
 }
 
 **/*.go !**/*_test.go **/*.html {
+  prep: npm run tw
   prep: go build -gcflags=all="-N -l" -o ./build/lenslocked
   daemon +sigterm: ./build/lenslocked
 }
