--- a/01_lenslocked/Makefile
+++ b/01_lenslocked/Makefile
@@ -4,15 +4,23 @@ run:
 
 .PHONY: status
 status:
-	cd migrations && goose postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" status
+	goose --dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" status
 
 .PHONY: up
 up:
-	cd migrations && goose postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" up
+	goose --dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" up
 
 .PHONY: down
 down:
-	cd migrations && goose postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" down
+	goose --dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" down
+
+.PHONY: reset
+reset:
+	goose --dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" reset
+
+.PHONY: fix
+fix:
+	goose --dir ./migrations fix
 
 .PHONY: updocker
 updocker:
