Fix some small issues in the Makefile.

--- a/01_lenslocked/Makefile
+++ b/01_lenslocked/Makefile
@@ -4,23 +4,23 @@ run:
 
 .PHONY: status
 status:
-	goose --dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" status
+	goose -dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" status
 
 .PHONY: up
 up:
-	goose --dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" up
+	goose -dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" up
 
 .PHONY: down
 down:
-	goose --dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" down
+	goose -dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" down
 
 .PHONY: reset
 reset:
-	goose --dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" reset
+	goose -dir ./migrations postgres "host=localhost port=5432 user=goblina password=jinnythejimbo dbname=lenslocked sslmode=disable" reset
 
 .PHONY: fix
 fix:
-	goose --dir ./migrations fix
+	goose -dir ./migrations fix
 
 .PHONY: updocker
 updocker:
