--- a/01_lenslocked/compose.yaml
+++ b/01_lenslocked/compose.yaml
@@ -13,6 +13,7 @@ services:
       - 5432:5432 # format here is "port on our machine":"port on container"
 
   # Adminer provides a nice little web UI to connect to databases
+  # TODO: Remove this shit
   adminer:
     image: adminer
     restart: always
